# adaptive-offloading-system

./: .gitignore  Makefile  README.md  data.py  requirements.txt  results.py  script.py  script.sh  ssh.py
analytics/: cli.py  policies.xml  policy_manager.py
analytics-service/: cli.py  jefersion.pcap  policies.xml  preparation.py  pyproject.toml
analytics-service/classification/: classifier.py
analytics-service/drift/: detector.py
analytics-service/main/: __main__.py
analytics-service/models/: metric.py
analytics-service/network/: mqtt.py  publisher.py  subscriber.py
analytics-service/stream/: processor.py
analytics-service/training/: trainer.py
analytics/main/: __main__.py
analytics/models/: metric.py
analytics/network/: mqtt.py  publisher.py  subscriber.py
analytics/stream/: processor.py
analytics/training/: trainer.py
cli/: go.mod  go.sum
cli/cmd/: main.go
ddos-detection-app/: build.sbt
ddos-detection-app/.bsp/: sbt.json
ddos-detection-app/conf/: flink-conf.yml
decision/: go.mod  go.sum
decision/cmd/: main.go
decision/pkg/flink/: flink.go  jobs.go  savepoint.go
decision/pkg/mqtt/: broker.go  publisher.go  subscriber.go  topics.go
decision/pkg/runner/: cloud.go  edge.go  log.go
decision/pkg/state/: state.go
decision/pkg/stm/: state.go
experiments/: analytics.py  constants.py  data.py  drift.py  flink.py  group_csv.py  load.py  ml.py  results.py  script.py  ssh.py  sub.py  tampas.py
profiling-service/: README.md  go.mod  go.sum
profiling-service/cmd/: example_resp.json  main.go
(+18 files in other folders)
