[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = "A server for training and classifying with online learning models"
authors = ["João Neto <joao.alexandre@cesar.org.br>"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.5.1"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
